Bug 310164 - Numeric "Enter" doesn't work when using find.
Summary: Numeric "Enter" doesn't work when using find.
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.3
Platform: unspecified Linux
: NOR minor
Target Milestone: 2.0
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-15 18:33 UTC by Martin Holec
Modified: 2013-02-12 14:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Holec 2012-11-15 18:33:34 UTC
Numeric "Enter" doesn't work when using find.

Reproducible: Always

Steps to Reproduce:
1. ctrl +f
2. write some existing string
3. try "Enter" on numeric block
Actual Results:  
Find doesn't skip to next found term.

Expected Results:  
"Enter" on numeric block should work for find same as "Enter" on alphanumeric block does.
Comment 1 Andrea Diamantini 2013-02-12 14:55:55 UTC
Git commit 2f9a8d1464c1504104826a52e3608019434e5176 by Andrea Diamantini, on behalf of Dimitrios Christidis.
Committed on 12/02/2013 at 12:53.
Pushed by adjam into branch 'master'.

Add support for numpad Enter in find.
REVIEW: 108918

Signed-off-by: Andrea Diamantini <adjam7@gmail.com>

M  +1    -1    src/webwindow/findbar.cpp

http://commits.kde.org/rekonq/2f9a8d1464c1504104826a52e3608019434e5176
Comment 2 Andrea Diamantini 2013-02-12 14:56:23 UTC
Git commit def0dd21bccf3c37f5621da974beacccefd32202 by Andrea Diamantini, on behalf of Dimitrios Christidis.
Committed on 12/02/2013 at 12:53.
Pushed by adjam into branch 'master'.

Add support for numpad Enter in find.
REVIEW: 108918

Signed-off-by: Andrea Diamantini <adjam7@gmail.com>

M  +1    -1    src/webwindow/findbar.cpp

http://commits.kde.org/rekonq/def0dd21bccf3c37f5621da974beacccefd32202