Add support for numpad Enter in find.

BUG: 310164
REVIEW: 108918

Signed-off-by: Andrea Diamantini <adjam7@gmail.com>